--- a/package.json
+++ b/package.json
@@ -41,32 +41,32 @@
     "lint:fix": "eslint --ext .ts,.tsx src --fix"
   },
   "devDependencies": {
-    "@golevelup/ts-jest": "^0.3.3",
-    "@nestjs/common": "8.0.0",
-    "@nestjs/core": "8.0.0",
-    "@nestjs/swagger": "^5.2.1",
-    "@types/jest": "^26.0.14",
+    "@golevelup/ts-jest": "^0.3.7",
+    "@nestjs/common": "^9.4.1",
+    "@nestjs/core": "^9.4.1",
+    "@nestjs/swagger": "^6.3.0",
+    "@types/jest": "^29.5.1",
     "@types/merge-deep": "^3.0.0",
-    "esbuild": "^0.14.24",
-    "eslint": "^8.18.0",
-    "eslint-kit": "^5.7.0",
-    "jest": "^28.1.0",
+    "esbuild": "^0.17.19",
+    "eslint": "^8.41.0",
+    "eslint-kit": "^8.5.0",
+    "jest": "^29.5.0",
     "reflect-metadata": "^0.1.13",
-    "rollup": "^2.69.0",
+    "rollup": "^3.22.1",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^4.1.0",
-    "rollup-plugin-esbuild": "^4.8.2",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rxjs": "^7.5.5",
-    "ts-jest": "^28.0.2",
-    "typescript": "4.6.3",
-    "zod": "3.21.4"
+    "rxjs": "^7.8.1",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
   },
   "peerDependencies": {
-    "@nestjs/common": ">= 8.0.0",
-    "@nestjs/core": ">= 8.0.0",
-    "@nestjs/swagger": ">= 5.0.0",
+    "@nestjs/common": ">= 9.0.0",
+    "@nestjs/core": ">= 9.0.0",
+    "@nestjs/swagger": ">= 6.0.0",
     "zod": ">= 3.14.3"
   },
   "peerDependenciesMeta": {
