--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -22,15 +18,8 @@
     "declarationDir": "./dist",
     "baseUrl": "./",
     "outDir": "./dist",
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": [
-    "./node_modules",
-    "./dist"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["./node_modules", "./dist"],
+  "include": ["src"]
 }
