--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "All NestJS + Zod utilities you need",
   "version": "0.0.0-set-by-ci",
   "main": "./dist/index.js",
+  "type": "module",
   "exports": {
     ".": "./dist/index.js",
     "./z": {
